--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": [
     {
-      "target": "danotes",
+      "target": "notes",
       "source": ".",
       "frameworksBackend": {}
     }
